fixing: alignment issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,8 +100,8 @@ section {
 }
 
 .svg-animation {
-  -webkit-animation: move 1s infinite;
-          animation: move 1s infinite;
+  -webkit-animation: move 1.5s infinite;
+          animation: move 1.5s infinite;
 }
 
 @-webkit-keyframes move {
@@ -474,11 +474,12 @@ section {
 .service-section h2 {
   text-align: center;
   padding: 10px 0px 50px;
+  max-width: 480px;
 }
 
 @media (max-width: 767px) {
-  .service-section h2 br {
-    display: none;
+  .service-section h2 {
+    max-width: 100%;
   }
 }
 
@@ -588,6 +589,9 @@ section {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 45px 0;
 }
 
@@ -604,23 +608,17 @@ section {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 30%;
           flex: 0 0 30%;
-}
-
-@media (max-width: 580px) {
-  .portfolio-section .portfolio-wrap .portfolio-item {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-}
-
-.portfolio-section .portfolio-wrap .portfolio-item a {
   background: #1E1E20;
   border-radius: 10px;
   padding: 16px;
 }
 
+.portfolio-section .portfolio-wrap .portfolio-item img {
+  width: 100%;
+}
+
 .portfolio-section .portfolio-wrap .portfolio-item--two {
-  margin-top: 40px;
+  margin-top: 60px;
   text-align: center;
 }
 
@@ -631,7 +629,7 @@ section {
 }
 
 .portfolio-section .portfolio-wrap .portfolio-item--three {
-  margin-top: 80px;
+  margin-top: 100px;
   text-align: right;
 }
 
@@ -695,23 +693,17 @@ section {
 }
 
 .contact-section .contact-wrap h2 {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 70%;
-          flex: 0 0 70%;
+  max-width: 480px;
 }
 
 @media (max-width: 767px) {
   .contact-section .contact-wrap h2 {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-            flex: 0 0 100%;
+    display: block;
     text-align: center;
+    max-width: 100%;
     margin-bottom: 30px;
     font-size: 36px;
     line-height: 54px;
-  }
-  .contact-section .contact-wrap h2 br {
-    display: none;
   }
 }
 
