--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -93,7 +93,7 @@ section{
 	
 }
 .svg-animation{
-	animation: move 1s infinite;
+	animation: move 1.5s infinite;
 }
 @keyframes move {
   from {
