--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -14,14 +14,14 @@
         flex-wrap: wrap;
         align-items: center;
         h2{
-            flex: 0 0 70%;
+            max-width: 480px;
             @include max(767px){
-                flex: 0 0 100%;
+                display: block;
                 text-align: center;
+                max-width: 100%;
                 margin-bottom: 30px;
                 font-size: 36px;
                 line-height: 54px;
-                br{display: none;}
             }
         }
         .contact-btn{
